feat : change getPendingRequests